File: plugins/nexus-coreui-plugin/src/main/java/org/sonatype/nexus/coreui/internal/ldap/LdapStateContributor.java